# gta_base

./: .deepsource.toml  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  build.bat  sonar-project.properties
base/: CMakeLists.txt  MusinessBanagersource.lua  notes.txt  task_natives.cpp
base/example-scripts/: test.lua
base/example-scripts/hello_world/: manifest.lua
base/src/: dllmain.cpp  main.cpp  main.hpp  pch.hpp
base/src/commands/: command_manager.hpp
base/src/common/: common.hpp  globals.hpp
base/src/d3d/: draw.hpp  renderer.cpp  renderer.hpp  texturemanager.cpp  texturemanager.hpp
base/src/fiber/: manager.cpp  manager.hpp  pool.cpp  pool.hpp  script.cpp  script.hpp
base/src/hooking/: detour.cpp  detour.hpp  hooking.cpp  hooking.hpp  native_hooking.cpp  native_hooking.hpp  vmt.cpp  vmt.hpp  wndproc.cpp  wndproc.hpp
base/src/key_input/: controller.cpp  controller.hpp  cooldown_input.cpp  cooldown_input.hpp  keyboard.cpp  keyboard.hpp  manager.cpp  manager.hpp
base/src/logger/: logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp  stacktrace.cpp  stacktrace.hpp
base/src/looped_game/: self_features.cpp  self_features.hpp  self_globals.cpp  self_globals.hpp  transition_state.cpp  transition_state.hpp  weapon.cpp  weapon.hpp
base/src/lua/: logger.cpp  logger.hpp  manager.cpp  manager.hpp  script.cpp  script.hpp  script_info.hpp  script_manifest.cpp  script_manifest.hpp
base/src/memory/: pointers.cpp  pointers.hpp  sigscanner.hpp
base/src/misc/: common.cpp  common.hpp  enum_flags.hpp  globals.cpp  globals.hpp  hotkey_manager.cpp  hotkey_manager.hpp  json.cpp  json.hpp  settings.cpp  settings.hpp  thread_pool.cpp  thread_pool.hpp  timed_input.cpp  timed_input.hpp  timedinput.cpp  timedinput.hpp
base/src/natives/: crossmap.hpp  invoker.cpp  invoker.hpp  natives.cpp  natives.hpp  spoof.asm
base/src/player_mgr/: manager.cpp  manager.hpp  player.cpp  player.hpp
base/src/rage/: classes.hpp  enums.hpp  global_idx.hpp  joaat.hpp  types.hpp
base/src/rpc/: discord.cpp  discord.hpp
base/src/scriptmanager/: base_script.hpp  enums.hpp  scriptmanager.cpp  scriptmanager.hpp
base/src/settings/: option_state.cpp  option_state.hpp  profile.hpp  settings.cpp  settings.hpp
base/src/thread_pool/: thread_pool.hpp
base/src/threads/: base_script.hpp  threaddefs.hpp  threads.cpp  threads.hpp
base/src/ui/: manager.cpp  manager.hpp
common/: CMakeLists.txt  vendor.cmake
common/src/: address.hpp  conversion.cpp  conversion.hpp  fmt.cpp  fmt.hpp  globals.hpp  pch.hpp  result.hpp  vfs.hpp
common/src/concurrency/: spinlock.cpp  spinlock.hpp
common/src/conversion/: cw2a.cpp  cw2a.hpp  hex.cpp  hex.hpp  joaat.hpp
common/src/fmt/: fs_formatter.cpp  fs_formatter.hpp  glaze_formatter.cpp  glaze_formatter.hpp
common/src/fs/: vfs.cpp  vfs.hpp
common/src/logging/: logger.cpp  logger.hpp  logging_macro.hpp
common/src/memory/: address.cpp  address.hpp
common/src/util/: enum_bitops.hpp  ranged_value.hpp  result.cpp  result.hpp  spinlock.cpp  spinlock.hpp  string.cpp  string.hpp  time.cpp  time.hpp
common/src/win32/: all.hpp  memory.cpp  memory.hpp  misc.cpp  misc.hpp  signal.hpp
common/test/: CMakeLists.txt
common/test/src/: main.cpp  test_globals.hpp
crossmap_gen/: CMakeLists.txt
crossmap_gen/src/: get_files.cpp  get_files.hpp  main.cpp  opcodes.hpp  script_file.cpp  script_file.hpp
imfont/: CMakeLists.txt  vendor.cmake
imfont/src/: IconsFontAwesome6.hpp  imfont.cpp  imfont.hpp
imfont/test/: CMakeLists.txt
imfont/test/src/: imfont_test.cpp  imfont_test.hpp  main.cpp  test_globals.hpp
injector/: CMakeLists.txt  vendor.cmake
injector/src/: inject.cpp  inject.hpp  main.cpp  pch.hpp  settings.cpp  settings.hpp  window.cpp  window.hpp
injector/test/: CMakeLists.txt
injector/test/src/: main.cpp
lua_codegen/: CMakeLists.txt
lua_codegen/src/: convert.cpp  convert.hpp  main.cpp  types.hpp
menu/: CMakeLists.txt  README.md  vendor.cmake
menu/src/: default.cpp  default.hpp  dllmain.cpp  globals.hpp  main.cpp  main.hpp  pch.hpp
menu/src/discord/: rich_presence.cpp  rich_presence.hpp
menu/src/feature/: feature_loop.cpp  feature_loop.hpp  feature_settings.cpp  feature_settings.hpp  settings_data.cpp  settings_data.hpp
menu/src/game/: script.cpp  script.hpp
menu/src/hooking/: hooking.cpp  hooking.hpp  wndproc.cpp  wndproc.hpp
menu/src/hotkey/: hotkey_manager.cpp  hotkey_manager.hpp
menu/src/logging/: logger.cpp  logger.hpp  logging_macro.hpp  plh_logger.hpp
menu/src/memory/: address.hpp  pointers.cpp  pointers.hpp
menu/src/natives/: crossmap.cpp  crossmap.hpp  invoker.cpp  invoker.hpp  natives_gen9.cpp  natives_gen9.hpp
menu/src/options/: base_command.hpp  base_option.hpp  option_registry.cpp  option_registry.hpp  options.cpp  options.hpp
menu/src/rage/: native_types.hpp
menu/src/render/: animate.hpp  draw.cpp  draw.hpp  draw_commands.hpp  draw_util.cpp  draw_util.hpp  imgui_input_queue.cpp  imgui_input_queue.hpp  manager.cpp  manager.hpp  render_hook.cpp  render_hook.hpp  render_thread.cpp  render_thread.hpp  renderer.cpp  renderer.hpp  thread.cpp  thread.hpp
menu/src/script/: game_task_executor.cpp  game_task_executor.hpp  script_base.hpp  script_manager.cpp  script_manager.hpp
menu/src/scripts/: base_script.hpp  script_manager.cpp  script_manager.hpp
menu/src/ui/: menu_renderer.cpp  menu_renderer.hpp  submenu.hpp  theme.cpp  theme.hpp
menu/src/util/: common.cpp  common.hpp  fs.ixx  key_event_listener.cpp  key_event_listener.hpp  mouse_state.cpp  mouse_state.hpp  profile.hpp  result.cpp  result.hpp  spinlock.cpp  spinlock.hpp  startup_shutdown_handler.hpp  string.cpp  string.hpp  thread_pool.hpp  type_traits.hpp  vfs.hpp
menu/src/win32/: all.hpp  memory.cpp  memory.hpp  misc.cpp  misc.hpp  signal.hpp
menu/test/: CMakeLists.txt
menu/test/src/: main.cpp
rage/: CMakeLists.txt
rage/src/: atArray.hpp  rage.cpp  tls_context.hpp  vector.hpp
rage/src/script/: custom_call_context.hpp  (+6 more)
ui_dev/: CMakeLists.txt
ui_dev/src/: main.cpp  main.hpp  wndproc.cpp  wndproc.hpp
(+399 files in other folders)
